frontend/tests/cases/positive/deriving/pullPair.gr
-- pull example

foo : forall {a : Type, b : Type} . (a [], b []) -> (a, b) []
foo = pull @(,)

main : (Int, Int) []
main = pull @(,) ([42], [1337])