frontend/tests/cases/negative/hsup/pushZeroOne.gr
pushZeroOne : forall {a b : Type} . (a, b) [Zero] -> (a [Zero], b [One])
pushZeroOne [(x, y)] = ([x], [y])